--- a/apps/okreads/browser/src/app/app.component.scss
+++ b/apps/okreads/browser/src/app/app.component.scss
@@ -8,6 +8,7 @@
 
 h1 {
   flex: 1;
+  color: #2d314c;
 }
 
 .header {
@@ -46,7 +47,7 @@ main {
 
   h2 {
     position: relative;
-    color: $white;
+    color: #2d314c;
     background-color: $gray80;
     margin: 0;
     padding: 0.75rem;
