--- a/libs/shared/styles/src/lib/variables.scss
+++ b/libs/shared/styles/src/lib/variables.scss
@@ -1,5 +1,5 @@
-$pink-accent: #ff4081;
-$pink-dark: #c62d62;
+$pink-accent: #ef771b;
+$pink-dark: #ff6f00;
 $pink-very-dark: #760e32;
 $gray05: #f8f8f8;
 $gray10: #f2f2f2;
